--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ language: cpp
 compiler:
   - clang
 
+env:
+  global:
+    - LLVM_VERSION=3.6.0
+    - LLVM_ARCHIVE_PATH=$HOME/clang+llvm.tar.xz
+
 addons:
   apt:
     sources:
@@ -23,6 +28,10 @@ addons:
 before_install:
   - sudo add-apt-repository -y ppa:boost-latest/ppa
   - sudo apt-get update -yqq
+  - wget http://llvm.org/releases/$LLVM_VERSION/clang+llvm-$LLVM_VERSION-x86_64-linux-gnu-ubuntu-14.04.tar.xz -O $LLVM_ARCHIVE_PATH
+  - mkdir $HOME/clang+llvm
+  - tar xf $LLVM_ARCHIVE_PATH -C $HOME/clang+llvm --strip-components 1
+  - export PATH=$HOME/clang+llvm/bin:$PATH
   - export CC=clang-3.6
   - export CXX=clang++-3.6
   # install cpplint
@@ -51,7 +60,7 @@ install:
   - local/bin/cmake -DCMAKE_BUILD_TYPE=Release -DWITH_TEST=ON .
   - make
   - make test
-  
+
 script:
   - ls -l bin
   - export PATH=$TRAVIS_BUILD_DIR/local/bin:$PATH
